# shellsidekick

./: .gitignore  PRD.md  QUICKSTART.md  README.md  demo_session.py  pyproject.toml  shellsidekick-mcp.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md
docs/prd/: PHASE2_PRD.md
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
specs/001-mcp-session-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-session-monitor/checklists/: requirements.md
specs/001-mcp-session-monitor/contracts/: detection-tools.md  history-tools.md  session-tools.md
src/shellsidekick/: __init__.py
src/shellsidekick/core/: __init__.py  detector.py  inference.py  monitor.py  patterns.py  storage.py
src/shellsidekick/mcp/: __init__.py  server.py  session_state.py
src/shellsidekick/mcp/tools/: __init__.py  detection.py  history.py  session.py
src/shellsidekick/models/: __init__.py  input_event.py  pattern.py  prompt.py  session.py
src/shellsidekick/utils/: __init__.py  file_utils.py  logging.py  security.py
tests/: __init__.py  conftest.py
tests/contract/: test_detection_tools.py  test_history_tools.py  test_pattern_persistence.py  test_session_tools.py
tests/integration/: test_basic_workflow.py  test_context_suggestions.py
tests/unit/: test_detector.py  test_monitor.py  test_patterns.py  test_security.py
